force-app/main/default/objects/Loan_Application__c/Loan_Application__c.object-meta.xml
<CustomObject>
    <description>Core loan application record representing a customer's request for credit. Tracks the full lifecycle from draft through disbursement.</description>
    <label>Loan Application</label>
    <nameField>
        <displayFormat>LSP-{YYYY}-{000000}</displayFormat>
        <label>Loan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>