force-app/main/default/objects/Loan_Application__c/fields/Co_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Name__c</fullName>
    <label>Co-Applicant Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>