force-app/main/default/objects/Loan_Application__c/fields/Co_Applicant_PAN__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_PAN__c</fullName>
    <label>Co-Applicant PAN</label>
    <type>Text</type>
    <length>255</length>
    <description>Stores AES-256 encrypted PAN of co-applicant. Never store plain text. Use EncryptionUtil.encrypt() before writing.</description>
</CustomField>