force-app/main/default/objects/Loan_Application__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <label>Dealer</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer Loan Applications</relationshipLabel>
    <relationshipName>Dealer_Loan_Applications</relationshipName>
</CustomField>