force-app/main/default/objects/Loan_Application__c/fields/Sanction_Date__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Date__c</fullName>
    <label>Sanction Date</label>
    <type>Date</type>
</CustomField>