force-app/main/default/objects/Loan_Application__c/fields/Sanctioned_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sanctioned_Amount__c</fullName>
    <label>Sanctioned Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>