force-app/main/default/objects/Loan_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Submitted</fullName><default>false</default><label>Submitted</label></value>
            <value><fullName>Under Review</fullName><default>false</default><label>Under Review</label></value>
            <value><fullName>KYC Verified</fullName><default>false</default><label>KYC Verified</label></value>
            <value><fullName>Credit Assessment</fullName><default>false</default><label>Credit Assessment</label></value>
            <value><fullName>Property Evaluation</fullName><default>false</default><label>Property Evaluation</label></value>
            <value><fullName>Sanctioned</fullName><default>false</default><label>Sanctioned</label></value>
            <value><fullName>Mandate Pending</fullName><default>false</default><label>Mandate Pending</label></value>
            <value><fullName>Mandate Active</fullName><default>false</default><label>Mandate Active</label></value>
            <value><fullName>Disbursed</fullName><default>false</default><label>Disbursed</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>