force-app/main/default/objects/Loan_Application__c/fields/Tenure_Months__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Months__c</fullName>
    <label>Tenure (Months)</label>
    <required>true</required>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>